--- a/css/sendmessage.css
+++ b/css/sendmessage.css
@@ -13,8 +13,8 @@ nav
 position:absolute; 
 float:left; 
 width:20%;
-height:1050px;
-background-image:url("navbackground.jpg");
+height:85%;
+background-image:url("img/navbackground.jpg");
 }
 
 article
