--- a/css/resume.css
+++ b/css/resume.css
@@ -14,7 +14,7 @@ position:absolute;
 float:left; 
 width:20%;
 height:85%;
-background-image:url("img/navbackground.jpg");
+background-image:url("../img/navbackground.jpg");
 }
 
 article
