--- a/css/index.css
+++ b/css/index.css
@@ -1,83 +1,4 @@
-/* Style Sheet for se.html */
-body
-{
-background-color: #e6f2ff;
-}
-
-header{
-height:15%;
-}
-
-nav
-{
-position:absolute; 
-float:left; 
-width:20%;
-height:85%;
-background-image:url("../img/navbackground.jpg");
-}
-
-article
-{
-position:relative;
-left:21%;
-width:79%;
-}
-
-footer
-{
-position:relative;
-left:21%;
-width:79%;
-margin-top:20px;
-}
-
-div.centerarticle
-{
-display:block;
-vertical-align:middle;
-width:79%;
-}
-
-div.floatright
-{
-float: right;
-margin-left:5px;
-}
-
-h1.center
-{
-text-align:center;
-}
-
-h1.pagetitle
-{
-color: #1a88ff;
-font-family: cursive;
-text-align: center;
-}
-
-img.logol
-{
-float:left;
-margin-right:5px;
-}
-
-img.floatright
-{
-float: right;
-margin-left:5px;
-}
-
-hr.article
-{
-height:2px;
-margin-left:0;
-text-align:left;
-}
-
-iframe.soundcloudfull
-{
-width: 100%;
-height: 100px;
+div.home-video {
+    margin-top: auto;
+    margin-bottom: auto;
 }
